Chart Tooltip: fixes misalignment in arrow tip.

--- a/client/components/chart/style.scss
+++ b/client/components/chart/style.scss
@@ -378,7 +378,7 @@
 				border: 4px solid $transparent;
 				border-bottom-color: darken( $gray, 30% );
 				position: absolute;
-					left: 231px  #{"/*rtl:ignore*/"};
+					left: 211px  #{"/*rtl:ignore*/"};
 					top: -3px;
 
 				.rtl & {
